--- a/CustomSASS/style.css
+++ b/CustomSASS/style.css
@@ -71,11 +71,18 @@ nav ul {
   justify-content: center;
   align-items: center;
 }
+
+nav ul li:hover{
+  font-weight: bold;
+  font-size: large;
+}
+
 nav ul li {
   list-style: none;
   margin: 10px;
   cursor: pointer;
-  font-weight: 700;
+  color: white;
+  font-weight: 600;
   font-size: medium;
   margin-right: 50px;
 }
