--- a/CustomSASS/style.css
+++ b/CustomSASS/style.css
@@ -16,7 +16,7 @@ header {
   background-color: whitesmoke;
   justify-content: space-between;
   max-width: 100%;
-  max-height: 40px;
+  max-height: fit-content;
   padding: 20px;
 }
 header #logo {
@@ -90,12 +90,19 @@ nav ul li {
 main {
   font-weight: 500;
 }
+
+#services{
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+}
 main #container {
   background-image: url("https://images.unsplash.com/photo-1611516491426-03025e6043c8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1333&q=80");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  opacity: 0.8;
+  opacity: 0.9;
+  background-position-x: 100%;
   min-width: 100%;
   height: 800px;
 }
@@ -103,10 +110,10 @@ main #container #content {
   position: relative;
   top: 200px;
   left: 100px;
+  max-width: 600px;
 }
 main #container #content h1 {
   margin: 0;
-  font-size: 80px;
   color: #fafef0;
   font-weight: 900;
   text-transform: capitalize;
@@ -116,6 +123,7 @@ main #container #content button {
   border-radius: 40px;
   border: none;
   margin: 40px 40px 0 0;
+  width: 60%;
   font-weight: 900;
   color: #fafef0;
   cursor: pointer;
@@ -262,3 +270,85 @@ footer #copyright .section a {
   text-decoration: none;
   color: #3a5dd9;
 }/*# sourceMappingURL=style.css.map */
+
+#contact{
+  width: 100%;
+}
+
+@media screen and (max-width: 800px) {
+  #services{
+    display: flex;
+    flex-direction: column;
+    height: 50%;
+    width: 100%;
+    margin-left: 50%;
+    transform: translate(-65%, 0);
+  }
+
+  #services > .sec{
+    background: white;
+    border-radius: 20px 20px 20px 20px;
+    padding: 45px;
+    margin-top: 15px;
+    box-shadow: 1px 1px 5px 1px grey;
+  }
+
+  #article > img{
+    width: 60%;
+    height: 60%;
+    box-shadow: 1px 1px 5px 1px grey;
+  }
+  #article{
+    display: flex;
+    flex-direction: column;
+    width: fit-content;
+    margin-left: 50%;
+    transform: translate(-65%, 0);
+  }
+
+  #article > .text > .tab-content > .content{
+    width: 95%;
+    font-weight: bolder;
+  }
+
+  #footer > #partners{
+    display: block;
+    width: 100%;
+  }
+  #footer > #partners >h1{
+    display: flex;
+    justify-content: center;
+    transform: translate(-15%, 0);
+  }
+
+  #footer > #partners > img {
+    padding: 10px;
+  }
+
+  #footer > #company-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transform: translate(-15%, 0);
+  }
+
+  #footer > #company-info > section {
+    background: white;
+    background-size: 50%;
+    padding: 50px;
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 1px 1px 5px 2px grey;
+  }
+
+  #footer > #copyright{
+    display: flex;
+    flex-direction: column;
+    transform: translate(-15%, 0);
+  }
+
+  #nav{
+    display: flex;
+    flex-direction: column;
+    transform: translate(-15%, 0);
+  }
+}
