--- a/CustomSASS/style.css
+++ b/CustomSASS/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap");
+
 body {
   margin: 0;
   padding: 0;
@@ -19,20 +20,26 @@ header {
   max-height: fit-content;
   padding: 20px;
 }
+
 header #logo {
   display: flex;
   justify-content: center;
   align-items: center;
   max-height: 50px;
 }
+
 header #logo .fa-solid {
   margin-right: 10px;
 }
+
 header #contact {
+  padding-right: 2rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+
 }
+
 header #contact #phone {
   display: flex;
   display: flex;
@@ -40,6 +47,7 @@ header #contact #phone {
   align-items: center;
   margin-right: 30px;
 }
+
 header #contact #phone img {
   display: flex;
   justify-content: center;
@@ -48,6 +56,7 @@ header #contact #phone img {
   height: 40px;
   margin-right: 10px;
 }
+
 header #contact #quote-button {
   border-radius: 30px;
   border: none;
@@ -58,44 +67,58 @@ header #contact #quote-button {
 
 nav {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 40px;
   justify-content: space-between;
-  padding: 10px 10px 10px 0;
+  min-height: 40px;
+  padding: 10px;
   background-color: #031144;
   color: #fafef0;
 }
+
 nav ul {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
-nav ul li:hover{
-  font-weight: bold;
-  font-size: large;
+nav ul:first-child {
+  width: 70%;
+  max-width: 700px;
 }
+
+nav ul:last-child {
+  width: 11%;
+}
+
+nav ul:last-child li {
+  font-size: 26px;
+}
+
+
 
 nav ul li {
   list-style: none;
-  margin: 10px;
+  padding: 10px;
   cursor: pointer;
   color: white;
   font-weight: 600;
   font-size: medium;
-  margin-right: 50px;
+}
+
+nav ul :hover {
+  transition: all 0.1s ease 0.2s;
+  transform: scale(1.3);
 }
 
 main {
   font-weight: 500;
 }
 
-#services{
+#services {
   display: flex;
   flex-direction: row;
   max-width: 100%;
 }
+
 main #container {
   background-image: url("https://images.unsplash.com/photo-1611516491426-03025e6043c8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1333&q=80");
   background-repeat: no-repeat;
@@ -106,18 +129,21 @@ main #container {
   min-width: 100%;
   height: 800px;
 }
+
 main #container #content {
   position: relative;
   top: 200px;
   left: 100px;
   max-width: 600px;
 }
+
 main #container #content h1 {
   margin: 0;
   color: #fafef0;
   font-weight: 900;
   text-transform: capitalize;
 }
+
 main #container #content button {
   padding: 15px 80px;
   border-radius: 40px;
@@ -129,20 +155,25 @@ main #container #content button {
   cursor: pointer;
   box-shadow: 1px 1px;
 }
+
 main #container #content #start-button {
   background-color: #3a5dd9;
 }
+
 main #container #content #start-button:hover {
   background-color: #031144;
   box-shadow: 3px 3px;
 }
+
 main #container #content #view-button {
   background-color: #d81a44;
 }
+
 main #container #content #view-button:hover {
   background-color: #ae072c;
   box-shadow: 3px 3px;
 }
+
 main section {
   display: flex;
   justify-content: center;
@@ -151,25 +182,29 @@ main section {
   padding: 40px;
   background-color: whitesmoke;
 }
+
 main section .sec {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 30px;
 }
+
 main section .sec .text h4 {
   text-transform: uppercase;
   font-size: larger;
   font-weight: 900;
   margin: 0;
 }
-.content{
+
+.content {
   display: none;
 }
 
 .about-content {
   display: block;
 }
+
 main article {
   display: flex;
   justify-content: center;
@@ -178,11 +213,13 @@ main article {
   margin: 20px 0 0 0;
   padding: 40px;
 }
+
 main article img {
   height: 500px;
   width: 500px;
   border-radius: 20px;
 }
+
 main article .text {
   display: flex;
   flex-direction: column;
@@ -190,10 +227,12 @@ main article .text {
   width: 500px;
   height: 500px;
 }
+
 main article .text h2 {
   margin: 0;
   font-size: xx-large;
 }
+
 main article .text .tab-title {
   display: flex;
   justify-content: center;
@@ -201,6 +240,7 @@ main article .text .tab-title {
   border-bottom: 1px solid black;
   margin-bottom: 20px;
 }
+
 main article .text .tab-title h6 {
   margin: 20px 20px 0 0;
   font-size: medium;
@@ -209,13 +249,16 @@ main article .text .tab-title h6 {
   border-bottom: none;
   cursor: pointer;
 }
+
 main article .text .tab-title h6:hover {
   background-color: whitesmoke;
 }
+
 footer {
   width: 100%;
   font-weight: 900;
 }
+
 footer #partners {
   background-color: #031144;
   padding: 40px 0;
@@ -224,14 +267,17 @@ footer #partners {
   align-items: center;
   flex-direction: column;
 }
+
 footer #partners h1 {
   margin: 0;
   text-transform: uppercase;
   color: #fafef0;
 }
+
 footer #partners #logos img {
   padding: 20px;
 }
+
 footer #company-info {
   display: flex;
   justify-content: center;
@@ -240,20 +286,24 @@ footer #company-info {
   padding: 40px 0;
   background-color: whitesmoke;
 }
+
 footer #company-info section {
   height: 140px;
   margin-bottom: 10px;
 }
+
 footer #company-info section .title {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 25px;
 }
+
 footer #company-info section .title h4 {
   text-transform: uppercase;
   font-weight: 900;
 }
+
 footer #copyright {
   width: 100%;
   padding: 20px 0;
@@ -263,20 +313,24 @@ footer #copyright {
   justify-content: space-around;
   background-color: #031144;
 }
+
 footer #copyright .section {
   color: #3a5dd9;
 }
+
 footer #copyright .section a {
   text-decoration: none;
   color: #3a5dd9;
-}/*# sourceMappingURL=style.css.map */
+}
 
-#contact{
+/*# sourceMappingURL=style.css.map */
+
+#contact {
   width: 100%;
 }
 
 @media screen and (max-width: 800px) {
-  #services{
+  #services {
     display: flex;
     flex-direction: column;
     height: 50%;
@@ -285,7 +339,7 @@ footer #copyright .section a {
     transform: translate(-65%, 0);
   }
 
-  #services > .sec{
+  #services>.sec {
     background: white;
     border-radius: 20px 20px 20px 20px;
     padding: 45px;
@@ -293,12 +347,13 @@ footer #copyright .section a {
     box-shadow: 1px 1px 5px 1px grey;
   }
 
-  #article > img{
+  #article>img {
     width: 60%;
     height: 60%;
     box-shadow: 1px 1px 5px 1px grey;
   }
-  #article{
+
+  #article {
     display: flex;
     flex-direction: column;
     width: fit-content;
@@ -306,33 +361,34 @@ footer #copyright .section a {
     transform: translate(-65%, 0);
   }
 
-  #article > .text > .tab-content > .content{
+  #article>.text>.tab-content>.content {
     width: 95%;
     font-weight: bolder;
   }
 
-  #footer > #partners{
+  #footer>#partners {
     display: block;
     width: 100%;
   }
-  #footer > #partners >h1{
+
+  #footer>#partners>h1 {
     display: flex;
     justify-content: center;
     transform: translate(-15%, 0);
   }
 
-  #footer > #partners > img {
+  #footer>#partners>img {
     padding: 10px;
   }
 
-  #footer > #company-info{
+  #footer>#company-info {
     display: flex;
     flex-direction: column;
     justify-content: center;
     transform: translate(-15%, 0);
   }
 
-  #footer > #company-info > section {
+  #footer>#company-info>section {
     background: white;
     background-size: 50%;
     padding: 50px;
@@ -340,13 +396,13 @@ footer #copyright .section a {
     box-shadow: 1px 1px 5px 2px grey;
   }
 
-  #footer > #copyright{
+  #footer>#copyright {
     display: flex;
     flex-direction: column;
     transform: translate(-15%, 0);
   }
 
-  #nav{
+  #nav {
     display: flex;
     flex-direction: column;
     transform: translate(-15%, 0);
